ENH: parabolic slider with elastic deformation use case, fixed height gradient communication

--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -5,7 +5,7 @@
    "id": "602e3750",
    "metadata": {},
    "source": [
-    "# Fluid Flow only"
+    "# Fluid Flow"
    ]
   },
   {
@@ -21,18 +21,22 @@
    "id": "10d6d83b",
    "metadata": {},
    "source": [
-    "We want to investigate the pressure and flow induced by a 2D parabolic slider ([YAML File](./examples/parabolic_slider_2d.yaml)).\n",
-    "\n",
-    "\n",
+    "We want to investigate the pressure and flow induced by a 2D parabolic slider using non-periodic boundary conditions.\n",
     "\n",
     "Features of this use case:\n",
-    "- $U = 50$ m/s\n",
-    "- $V = 0$ m/s\n",
-    "- $h_{\\mathrm{min}} = 1 \\cdot 10^{-5}$ m\n",
-    "- $h_{\\mathrm{max}} = 6.6 \\cdot 10^{-5}$ m\n",
-    "- $p_{\\mathrm{BC}} = 1$ bar\n",
-    "- $\\frac{\\partial j_x}{x}_{\\mathrm{BC}} = 0$\n",
-    "- $\\frac{\\partial j_y}{y}_{\\mathrm{BC}} = 0$"
+    "- $U = 50$ m/s, $V = 0$ m/s\n",
+    "- $h_{\\mathrm{min}} = 1 \\cdot 10^{-5}$ m, $h_{\\mathrm{max}} = 6.6 \\cdot 10^{-5}$ m\n",
+    "- BC: $p_{\\mathrm{BC}} = 1$ bar, $\\frac{\\partial j_x}{x}_{\\mathrm{BC}} = 0$, $\\frac{\\partial j_y}{y}_{\\mathrm{BC}} = 0$\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/parabolic_slider_2d.yaml)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be84d14d",
+   "metadata": {},
+   "source": [
+    "Load the problem configuration and observe the height profile:"
    ]
   },
   {
@@ -49,6 +53,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "caadb5cb",
+   "metadata": {},
+   "source": [
+    "Run the problem:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bd0d01a9",
@@ -56,6 +68,14 @@
    "outputs": [],
    "source": [
     "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa4adc66",
+   "metadata": {},
+   "source": [
+    "And plot the solution:"
    ]
   },
   {
@@ -81,7 +101,7 @@
    "id": "7c892aab",
    "metadata": {},
    "source": [
-    "initial zero flow, building up by U"
+    "We want to observe the stability of flow build-up by manually setting flow to zero after initializing the simulation."
    ]
   },
   {
@@ -96,10 +116,8 @@
     "\n",
     "problem = Problem.from_yaml(\"examples/couette_2d.yaml\")\n",
     "problem.q[1] = 0. # Set jx = 0 everywhere\n",
-    "problem.run()\n",
     "\n",
-    "print(np.max(problem.q[2]))  # Max jy\n",
-    "print(np.min(problem.q[2]))  # Min jy\n",
+    "problem.run()\n",
     "\n",
     "problem.animate()"
    ]
@@ -109,7 +127,7 @@
    "id": "4858738d",
    "metadata": {},
    "source": [
-    "# Energy"
+    "# Fluid Flow + Energy"
    ]
   },
   {
@@ -125,7 +143,7 @@
    "id": "99c238fa",
    "metadata": {},
    "source": [
-    "Dynamic simulation of 2D heat diffusion with comparison to the analytic solution ([YAML File](./examples/temp_diffusion_2d.yaml)).\n",
+    "Dynamic simulation of 2D heat diffusion with comparison to the analytic solution.\n",
     "\n",
     "Setup:\n",
     "- Dirichlet temperature boundary conditions in x: T=0 at both ends\n",
@@ -137,7 +155,9 @@
     "\n",
     "$$T(x,t) = T_{max} \\cdot e^{-\\lambda^2 t} \\cdot \\sin\\left(\\pi \\cdot x_{norm}\\right)$$\n",
     "\n",
-    "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$ and $\\alpha = \\frac{k}{c_v \\rho}$."
+    "where $\\lambda = \\sqrt{\\alpha} \\cdot \\frac{\\pi}{L_{eff}}$ and $\\alpha = \\frac{k}{c_v \\rho}$.\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/temp_diffusion_2d.yaml)**"
    ]
   },
   {
@@ -217,7 +237,7 @@
    "id": "13d9eff9",
    "metadata": {},
    "source": [
-    "Dynamic simulation of 2D temperature advection with a sine initial profile ([YAML File](./examples/temp_advection_2d.yaml)).\n",
+    "Dynamic simulation of 2D temperature advection with a sine initial profile.\n",
     "\n",
     "Setup:\n",
     "- Periodic boundary conditions in x and y\n",
@@ -232,7 +252,9 @@
     "Terms used:\n",
     "- `R31x`, `R31y`: Temperature convection (advection with velocity field)\n",
     "- `R3T`: Energy time derivative\n",
-    "- Mass and momentum terms for density and velocity fields"
+    "- Mass and momentum terms for density and velocity fields\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/temp_advection_2d.yaml)**"
    ]
   },
   {
@@ -294,6 +316,114 @@
    "metadata": {},
    "source": [
     "# Elastic Deformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0183b4f6",
+   "metadata": {},
+   "source": [
+    "Here we run again the parbolic slider use case but this time with elastic deformation activated\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/parabolic_slider_2d_deform.yaml)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45bd0a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GaPFlow.problem import Problem\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/parabolic_slider_2d_deform.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc31bc58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"icoordsg[0] (x indices):\")\n",
+    "print(problem.topo.x[:, 0])  # First column x-coordinates\n",
+    "print(problem.topo.x[-3:, 0])  # Last few x-coordinates\n",
+    "\n",
+    "print(\"\\ndh_dx first/last columns:\")\n",
+    "print(problem.topo.dh_dx[0:3, problem.grid['Ny']//2])  # First 3 x values at mid-y\n",
+    "print(problem.topo.dh_dx[-3:, problem.grid['Ny']//2])  # Last 3 x values at mid-y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32573252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def print_p_and_deform():\n",
+    "    p_field = problem.pressure.pressure\n",
+    "    p_max = p_field.max()\n",
+    "    u_field = problem.topo.deformation\n",
+    "    u_max = u_field.max()\n",
+    "    print(f\"Max Pressure: {p_max:.2f} Pa, Max Deformation: {u_max:.6f} m\")\n",
+    "\n",
+    "problem.add_callback(print_p_and_deform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15635651",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee526dad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.plot_topo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0cfaea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f473258",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_field = problem.topo.h\n",
+    "h_slice = h_field[1:-1, h_field.shape[1]//2]\n",
+    "\n",
+    "h_undef = problem.topo.h_undeformed\n",
+    "h_undef_slice = h_undef[1:-1, h_undef.shape[1]//2]\n",
+    "\n",
+    "from matplotlib.pyplot import legend, plot\n",
+    "plot(h_slice)\n",
+    "plot(h_undef_slice)\n",
+    "legend(['Deformed Height', 'Undeformed Height'])\n",
+    "    \n",
+    "\n"
    ]
   }
  ],
