--- a/doc/tutorials/13_solver_comparison.ipynb
+++ b/doc/tutorials/13_solver_comparison.ipynb
@@ -25,6 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "from pathlib import Path\n",
     "from GaPFlow.problem import Problem\n",
+    "from utils import plot_solver_comparison_rho_jx  # type: ignore\n",
     "\n",
     "CONFIG_DIR = Path('../../tests/configs')"
    ]
@@ -40,8 +41,7 @@
     "SOLVER_DEFAULTS = {\n",
     "    'explicit': {'Ny': 1, 'solver': 'explicit', 'max_it': 50000},\n",
     "    'fem_1d': {'Ny': 1, 'solver': 'fem', 'dt': 0.1, 'max_it': 100},\n",
-    "    'fem_2d': {'Ny': 4, 'solver': 'fem', 'dt': 0.1, 'max_it': 100,\n",
-    "               'pressure_stab_alpha': 1000, 'momentum_stab_alpha': 10000},\n",
+    "    'fem_2d': {'Ny': 4, 'solver': 'fem', 'dt': 0.1, 'max_it': 100},\n",
     "}"
    ]
   },
@@ -57,8 +57,7 @@
     "        return f.read()\n",
     "\n",
     "def build_config(template, solver, **overrides):\n",
-    "    params = {'pressure_stab_alpha': 0, 'momentum_stab_alpha': 0,\n",
-    "              'adaptive': 0, 'CFL': 0.5, 'rho_bc': 1.0}\n",
+    "    params = {'adaptive': 0, 'CFL': 0.5, 'rho_bc': 1.0}\n",
     "    params.update(SOLVER_DEFAULTS[solver])\n",
     "    params.update(overrides)\n",
     "    return template.format(**params)\n",
@@ -90,32 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_comparison(results, title):\n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(12, 4))\n",
-    "    colors = {'explicit': 'C0', 'fem_1d': 'C1', 'fem_2d': 'C2'}\n",
-    "    labels = {'explicit': 'Explicit', 'fem_1d': 'FEM 1D', 'fem_2d': 'FEM 2D'}\n",
-    "    \n",
-    "    Nx = len(list(results.values())[0]['rho'])\n",
-    "    x = np.linspace(0, 1, Nx)\n",
-    "    \n",
-    "    for name, res in results.items():\n",
-    "        axes[0].plot(x, res['rho'], color=colors[name], label=labels[name], lw=1.5)\n",
-    "        axes[1].plot(x, res['jx'], color=colors[name], label=labels[name], lw=1.5)\n",
-    "    \n",
-    "    axes[0].set_xlabel('x / L')\n",
-    "    axes[0].set_ylabel(r'$\\rho$ [kg/m³]')\n",
-    "    axes[0].legend()\n",
-    "    axes[0].grid(True, alpha=0.3)\n",
-    "    \n",
-    "    axes[1].set_xlabel('x / L')\n",
-    "    axes[1].set_ylabel(r'$j_x$ [kg/(m²s)]')\n",
-    "    axes[1].legend()\n",
-    "    axes[1].grid(True, alpha=0.3)\n",
-    "    \n",
-    "    fig.suptitle(title, fontsize=12)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
     "def print_timing(results):\n",
     "    print(\"Timing:\")\n",
     "    for solver in ['explicit', 'fem_1d', 'fem_2d']:\n",
@@ -129,7 +102,9 @@
    "source": [
     "## Inclined Slider (Air, PL EOS)\n",
     "\n",
-    "Linear converging gap with Dirichlet density BC."
+    "Linear converging gap with Dirichlet density BC.\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](../../tests/configs/inclined_slider.yaml)**"
    ]
   },
   {
@@ -150,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_comparison(results_inclined, 'Inclined Slider')\n",
+    "plot_solver_comparison_rho_jx(results_inclined, 'Inclined Slider')\n",
     "print_timing(results_inclined)"
    ]
   },
@@ -161,7 +136,10 @@
    "source": [
     "## Journal Bearing (Oil, DH EOS)\n",
     "\n",
-    "Cosine gap profile with fully periodic BC."
+    "Cosine gap profile with fully periodic BC.\n",
+    "\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](../../tests/configs/journal_bearing.yaml)**"
    ]
   },
   {
@@ -183,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_comparison(results_journal, 'Journal Bearing')\n",
+    "plot_solver_comparison_rho_jx(results_journal, 'Journal Bearing')\n",
     "print_timing(results_journal)"
    ]
   },
@@ -194,7 +172,10 @@
    "source": [
     "## Parabolic Slider (Oil, DH EOS)\n",
     "\n",
-    "Parabolic gap profile with Dirichlet density BC."
+    "Parabolic gap profile with Dirichlet density BC.\n",
+    "\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](../../tests/configs/parabolic_slider.yaml)**"
    ]
   },
   {
@@ -217,18 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_comparison(results_parabolic, 'Parabolic Slider')\n",
+    "plot_solver_comparison_rho_jx(results_parabolic, 'Parabolic Slider')\n",
     "print_timing(results_parabolic)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "summary-header",
-   "metadata": {},
-   "source": [
-    "## Summary\n",
-    "\n",
-    "All three solvers produce consistent results within 5% tolerance (inner region for Dirichlet BC cases)."
    ]
   }
  ],
