ENH/DOC: added reference pressure/displacement option, finished parabolic slider + elastic deform use case

--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -406,6 +406,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01f4dacb",
+   "metadata": {},
+   "source": [
+    "Height profiles along `x` in the middle:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1f473258",
@@ -421,9 +429,112 @@
     "from matplotlib.pyplot import legend, plot\n",
     "plot(h_slice)\n",
     "plot(h_undef_slice)\n",
-    "legend(['Deformed Height', 'Undeformed Height'])\n",
-    "    \n",
-    "\n"
+    "legend(['Deformed Height', 'Undeformed Height'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hhufxhk6pog",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "\n",
+    "# Get fields (inner cells only, excluding ghost cells)\n",
+    "h_deformed = problem.topo.h[1:-1, 1:-1]\n",
+    "h_undeformed = problem.topo.h_undeformed[1:-1, 1:-1]\n",
+    "\n",
+    "# Get coordinates\n",
+    "x = problem.topo.x[1:-1, 1:-1]\n",
+    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "\n",
+    "# Common colormap and z-axis limits for both plots\n",
+    "vmin = min(h_undeformed.min(), h_deformed.min())\n",
+    "vmax = max(h_undeformed.max(), h_deformed.max())\n",
+    "zmin, zmax = vmin * 1e6, vmax * 1e6\n",
+    "\n",
+    "# Create figure with two 3D subplots\n",
+    "fig = plt.figure(figsize=(14, 5), layout='constrained')\n",
+    "\n",
+    "# Undeformed state\n",
+    "ax1 = fig.add_subplot(121, projection='3d')\n",
+    "surf1 = ax1.plot_surface(x * 1e3, y * 1e3, h_undeformed * 1e6, \n",
+    "                          cmap='viridis_r', vmin=zmin, vmax=zmax,\n",
+    "                          edgecolor='none', alpha=0.9)\n",
+    "ax1.set_xlabel('x [mm]')\n",
+    "ax1.set_ylabel('y [mm]')\n",
+    "ax1.set_zlabel('h [µm]')\n",
+    "ax1.set_zlim(zmin, zmax)\n",
+    "ax1.set_title('Undeformed')\n",
+    "ax1.invert_zaxis()\n",
+    "ax1.view_init(elev=25, azim=-60)\n",
+    "\n",
+    "# Deformed state\n",
+    "ax2 = fig.add_subplot(122, projection='3d')\n",
+    "surf2 = ax2.plot_surface(x * 1e3, y * 1e3, h_deformed * 1e6,\n",
+    "                          cmap='viridis_r', vmin=zmin, vmax=zmax,\n",
+    "                          edgecolor='none', alpha=0.9)\n",
+    "ax2.set_xlabel('x [mm]')\n",
+    "ax2.set_ylabel('y [mm]')\n",
+    "ax2.set_zlabel('h [µm]')\n",
+    "ax2.set_zlim(zmin, zmax)\n",
+    "ax2.set_title('Deformed')\n",
+    "ax2.invert_zaxis()\n",
+    "ax2.view_init(elev=25, azim=-60)\n",
+    "\n",
+    "# Shared colorbar\n",
+    "fig.colorbar(surf2, ax=[ax1, ax2], shrink=0.6, label='h [µm]')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fq46i6gl1tl",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "from matplotlib.colors import Normalize\n",
+    "\n",
+    "# Get fields (inner cells only, excluding ghost cells)\n",
+    "h_deformed = problem.topo.h[1:-1, 1:-1]\n",
+    "p_field = problem.pressure.pressure[1:-1, 1:-1]\n",
+    "\n",
+    "# Get coordinates\n",
+    "x = problem.topo.x[1:-1, 1:-1]\n",
+    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "\n",
+    "# Create figure (same width as one subplot in the first figure)\n",
+    "fig = plt.figure(figsize=(8, 5), layout='constrained')\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "# Normalize pressure for colormap\n",
+    "norm = Normalize(vmin=p_field.min(), vmax=p_field.max())\n",
+    "colors = cm.turbo(norm(p_field))\n",
+    "\n",
+    "# Plot deformed surface colored by pressure\n",
+    "surf = ax.plot_surface(x * 1e3, y * 1e3, h_deformed * 1e6,\n",
+    "                        facecolors=colors, edgecolor='none', shade=False)\n",
+    "\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_zlabel('h [µm]')\n",
+    "ax.set_title('Deformed Surface (colored by pressure)')\n",
+    "ax.invert_zaxis()\n",
+    "ax.view_init(elev=25, azim=-60)\n",
+    "\n",
+    "# Add colorbar for pressure with padding\n",
+    "mappable = cm.ScalarMappable(norm=norm, cmap='turbo')\n",
+    "fig.colorbar(mappable, ax=ax, shrink=0.6, pad=0.15, label='Pressure [Pa]')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
