MAINT/DOC: few clean-ups, added 2D parabolic slider + energy + deform use case

--- a/doc/tutorials/12_fem_2d_examples.ipynb
+++ b/doc/tutorials/12_fem_2d_examples.ipynb
@@ -101,7 +101,9 @@
    "id": "7c892aab",
    "metadata": {},
    "source": [
-    "We want to observe the stability of flow build-up by manually setting flow to zero after initializing the simulation."
+    "We want to observe the stability of flow build-up by manually setting flow to zero after initializing the simulation.\n",
+    "\n",
+    "$\\rightarrow$ **[YAML File](./examples/couette_2d.yaml)**"
    ]
   },
   {
@@ -127,7 +129,15 @@
    "id": "4858738d",
    "metadata": {},
    "source": [
-    "# Fluid Flow + Energy"
+    "# Energy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b20fab6",
+   "metadata": {},
+   "source": [
+    "Fluid flow + activated energy equation"
    ]
   },
   {
@@ -148,8 +158,8 @@
     "Setup:\n",
     "- Dirichlet temperature boundary conditions in x: T=0 at both ends\n",
     "- Periodic boundary conditions in y\n",
-    "- Initial temperature: sine profile T(x,0) = T_max * sin(π*x_norm) constant over y\n",
-    "- No wall movement (U=0, V=0), pure diffusion\n",
+    "- Initial temperature: sine profile $T(x,0) = T_{max} * sin(π*x_{norm})$ constant over y\n",
+    "- No wall movement/fluid flow $(U=0, V=0)$, pure diffusion\n",
     "\n",
     "Since the initial condition and boundary conditions are uniform in y, and y has periodic BCs, the solution should match the 1D analytic solution:\n",
     "\n",
@@ -185,6 +195,14 @@
     "\n",
     "problem.add_callback(track_temperature)\n",
     "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d0b5d53",
+   "metadata": {},
+   "source": [
+    "Animation of the comparison to the analytic solution:"
    ]
   },
   {
@@ -271,12 +289,14 @@
     "problem = Problem.from_yaml(\"examples/temp_advection_2d.yaml\")\n",
     "\n",
     "# Store temperature history for animation\n",
-    "T_history = {'time': [], 'T': []}\n",
+    "T_history = {'time': [], 'T': [], 'T_2d': []}\n",
     "\n",
     "def track_T():\n",
     "    T_history['time'].append(problem.simtime)\n",
-    "    # Extract T along x at mid-y (should be constant in y)\n",
+    "    # Extract T along x at mid-y (for 1D animation)\n",
     "    T_history['T'].append(problem.energy.temperature[:, problem.grid['Ny']//2 + 1].copy())\n",
+    "    # Store full 2D field (for 3D animation)\n",
+    "    T_history['T_2d'].append(problem.energy.temperature.copy())\n",
     "\n",
     "problem.add_callback(track_T)\n",
     "problem.run()"
@@ -289,9 +309,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Animate temperature advection\n",
+    "# 1D animation of temperature advection\n",
     "import sys; sys.path.insert(0, '.')\n",
-    "from utils.plotting import animate_advection  # type: ignore\n",
     "\n",
     "# Get grid parameters\n",
     "L = problem.grid['Lx']\n",
@@ -305,9 +324,53 @@
     "# Cell centers including ghost cells\n",
     "x_vec = np.arange(Nx + 2) * dx - dx / 2\n",
     "t_vec = np.array(T_history['time'])\n",
-    "T_numeric = np.array(T_history['T'])\n",
+    "T_numeric = np.array(T_history['T'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75148055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.plotting import animate_advection  # type: ignore\n",
     "\n",
     "animate_advection(x_vec, t_vec, T_numeric, L, U_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5geatn5166s",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3D surface animation of temperature advection\n",
+    "from utils.plotting import animate_3d_surface  # type: ignore\n",
+    "\n",
+    "# Get grid parameters\n",
+    "Lx = problem.grid['Lx']\n",
+    "Ly = problem.grid['Ly']\n",
+    "Nx = problem.grid['Nx']\n",
+    "Ny = problem.grid['Ny']\n",
+    "dx = problem.grid['dx']\n",
+    "dy = problem.grid['dy']\n",
+    "\n",
+    "# Cell centers including ghost cells\n",
+    "x_vec = np.arange(Nx + 2) * dx - dx / 2\n",
+    "y_vec = np.arange(Ny + 2) * dy - dy / 2\n",
+    "\n",
+    "# Use every nth timestep to reduce frames while showing full advection cycle\n",
+    "every_n = 2\n",
+    "t_vec = np.array(T_history['time'][::every_n])\n",
+    "T_2d = np.array(T_history['T_2d'][::every_n])\n",
+    "\n",
+    "print(f\"Animation: {len(t_vec)} frames, t = {t_vec[0]:.2f} to {t_vec[-1]:.2f} s\")\n",
+    "print(f\"One full period takes {Lx / (problem.geo['U'] / 2):.1f} s\")\n",
+    "\n",
+    "animate_3d_surface(x_vec, y_vec, t_vec, T_2d, Lx=Lx, Ly=Ly,\n",
+    "                   title='Temperature Advection', cmap='coolwarm', figsize=(7, 4.5))"
    ]
   },
   {
@@ -315,7 +378,7 @@
    "id": "2b4ec8c2",
    "metadata": {},
    "source": [
-    "# Elastic Deformation"
+    "# Deformation"
    ]
   },
   {
@@ -323,7 +386,7 @@
    "id": "0183b4f6",
    "metadata": {},
    "source": [
-    "Here we run again the parbolic slider use case but this time with elastic deformation activated\n",
+    "Here we run again the parabolic slider use case but this time with elastic deformation activated\n",
     "\n",
     "$\\rightarrow$ **[YAML File](./examples/parabolic_slider_2d_deform.yaml)**"
    ]
@@ -338,22 +401,6 @@
     "from GaPFlow.problem import Problem\n",
     "\n",
     "problem = Problem.from_yaml(\"examples/parabolic_slider_2d_deform.yaml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc31bc58",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"icoordsg[0] (x indices):\")\n",
-    "print(problem.topo.x[:, 0])  # First column x-coordinates\n",
-    "print(problem.topo.x[-3:, 0])  # Last few x-coordinates\n",
-    "\n",
-    "print(\"\\ndh_dx first/last columns:\")\n",
-    "print(problem.topo.dh_dx[0:3, problem.grid['Ny']//2])  # First 3 x values at mid-y\n",
-    "print(problem.topo.dh_dx[-3:, problem.grid['Ny']//2])  # Last 3 x values at mid-y"
    ]
   },
   {
@@ -535,6 +582,315 @@
     "fig.colorbar(mappable, ax=ax, shrink=0.6, pad=0.15, label='Pressure [Pa]')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "235e1252",
+   "metadata": {},
+   "source": [
+    "# Deformation + Energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f285b866",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GaPFlow.problem import Problem\n",
+    "\n",
+    "problem = Problem.from_yaml(\"examples/parabolic_slider_2d_deform_energy.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "290145e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fb3e874",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problem.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "115f4b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_x = problem.energy.temperature[:, problem.grid['Ny']//2 + 1]\n",
+    "t_y = problem.energy.temperature[35, :]\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(t_x)\n",
+    "plt.plot(t_y)\n",
+    "plt.xlabel('Position along slice')\n",
+    "plt.ylabel('Temperature [K]')\n",
+    "plt.legend(['T along x at mid-y', 'T along y at x=70 mm'])\n",
+    "plt.title('Temperature Distribution after Simulation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "q21uz1c7tr",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D plot of the full temperature field\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Get temperature field (inner cells only, excluding ghost cells)\n",
+    "T_field = problem.energy.temperature[1:-1, 1:-1]\n",
+    "\n",
+    "# Get coordinates\n",
+    "x = problem.topo.x[1:-1, 1:-1]\n",
+    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "\n",
+    "# Create 2D contour/heatmap plot\n",
+    "fig, ax = plt.subplots(figsize=(6, 4), layout='constrained')\n",
+    "\n",
+    "# Use pcolormesh for the 2D temperature field\n",
+    "pcm = ax.pcolormesh(x * 1e3, y * 1e3, T_field, cmap='inferno', shading='auto')\n",
+    "\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_title('Temperature Field')\n",
+    "ax.set_aspect('equal')\n",
+    "\n",
+    "# Add colorbar\n",
+    "cbar = fig.colorbar(pcm, ax=ax, label='Temperature [K]')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1pg2vy6i5es",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2D plot of wall heat flux (top and bottom walls)\n",
+    "import matplotlib.pyplot as plt\n",
+    "from GaPFlow.models.heatflux import get_heatflux_2d\n",
+    "\n",
+    "# Get heat flux fields\n",
+    "q_top, q_bot = get_heatflux_2d(problem)\n",
+    "\n",
+    "# Get coordinates (inner cells only, excluding ghost cells)\n",
+    "x = problem.topo.x[1:-1, 1:-1]\n",
+    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "\n",
+    "# Create 2-panel plot\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 5), layout='constrained')\n",
+    "\n",
+    "# Top wall heat flux\n",
+    "pcm0 = axes[0].pcolormesh(x * 1e3, y * 1e3, q_top[1:-1, 1:-1], cmap='RdBu_r', shading='auto')\n",
+    "axes[0].set_xlabel('x [mm]')\n",
+    "axes[0].set_ylabel('y [mm]')\n",
+    "axes[0].set_title('Heat Flux at Top Wall')\n",
+    "axes[0].set_aspect('equal')\n",
+    "fig.colorbar(pcm0, ax=axes[0], label='q [W/m²]')\n",
+    "\n",
+    "# Bottom wall heat flux\n",
+    "pcm1 = axes[1].pcolormesh(x * 1e3, y * 1e3, q_bot[1:-1, 1:-1], cmap='RdBu_r', shading='auto')\n",
+    "axes[1].set_xlabel('x [mm]')\n",
+    "axes[1].set_ylabel('y [mm]')\n",
+    "axes[1].set_title('Heat Flux at Bottom Wall')\n",
+    "axes[1].set_aspect('equal')\n",
+    "fig.colorbar(pcm1, ax=axes[1], label='q [W/m²]')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0xainu5q5u0i",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Comprehensive 2x3 solution overview\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from GaPFlow.models.pressure import eos_pressure\n",
+    "\n",
+    "# Get fields (inner cells only, excluding ghost cells)\n",
+    "rho = problem.q[0][1:-1, 1:-1].T  # Transpose for plotting (Ny, Nx)\n",
+    "jx = problem.q[1][1:-1, 1:-1].T\n",
+    "jy = problem.q[2][1:-1, 1:-1].T\n",
+    "h = problem.topo.h[1:-1, 1:-1]\n",
+    "\n",
+    "# Grid parameters\n",
+    "Nx, Ny = problem.grid['Nx'], problem.grid['Ny']\n",
+    "dx, dy = problem.grid['dx'], problem.grid['dy']\n",
+    "\n",
+    "# Grid coordinates (cell centers)\n",
+    "x = np.linspace(dx / 2, Nx * dx - dx / 2, Nx)\n",
+    "y = np.linspace(dy / 2, Ny * dy - dy / 2, Ny)\n",
+    "X, Y = np.meshgrid(x, y)\n",
+    "\n",
+    "# Compute pressure from density\n",
+    "p = np.asarray(eos_pressure(rho, problem.prop))\n",
+    "\n",
+    "# Create figure with subplots\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15, 9), layout='constrained')\n",
+    "\n",
+    "# 1. Height field\n",
+    "ax1 = axes[0, 0]\n",
+    "c1 = ax1.contourf(X * 1000, Y * 1000, h.T * 1e6, levels=20, cmap='terrain')\n",
+    "fig.colorbar(c1, ax=ax1, label=r'$h$ [$\\mu$m]')\n",
+    "ax1.set_xlabel('x [mm]')\n",
+    "ax1.set_ylabel('y [mm]')\n",
+    "ax1.set_title(r'Gap height $h$')\n",
+    "ax1.set_aspect('equal')\n",
+    "\n",
+    "# 2. Density field with flux vectors\n",
+    "ax2 = axes[0, 1]\n",
+    "c2 = ax2.contourf(X * 1000, Y * 1000, rho, levels=20, cmap='viridis')\n",
+    "fig.colorbar(c2, ax=ax2, label=r'$\\rho$ [kg/m³]')\n",
+    "# Quiver plot for flux\n",
+    "skip = max(1, Nx // 12)\n",
+    "jx_skip, jy_skip = jx[::skip, ::skip], jy[::skip, ::skip]\n",
+    "j_mag = np.sqrt(jx_skip**2 + jy_skip**2)\n",
+    "j_mag[j_mag == 0] = 1  # Avoid division by zero\n",
+    "jx_norm, jy_norm = jx_skip / j_mag, jy_skip / j_mag\n",
+    "ax2.quiver(X[::skip, ::skip] * 1000, Y[::skip, ::skip] * 1000,\n",
+    "           jx_norm, jy_norm,\n",
+    "           color='white', alpha=0.9, scale=15, width=0.004, headwidth=3, headlength=4)\n",
+    "ax2.set_xlabel('x [mm]')\n",
+    "ax2.set_ylabel('y [mm]')\n",
+    "ax2.set_title(r'Density $\\rho$ with flux $\\mathbf{j}$')\n",
+    "ax2.set_aspect('equal')\n",
+    "\n",
+    "# 3. Pressure field\n",
+    "ax3 = axes[0, 2]\n",
+    "c3 = ax3.contourf(X * 1000, Y * 1000, p / 1000, levels=20, cmap='coolwarm')\n",
+    "fig.colorbar(c3, ax=ax3, label='p [kPa]')\n",
+    "ax3.set_xlabel('x [mm]')\n",
+    "ax3.set_ylabel('y [mm]')\n",
+    "ax3.set_title(f'Pressure field (EOS: {problem.prop[\"EOS\"]})')\n",
+    "ax3.set_aspect('equal')\n",
+    "\n",
+    "# 4. Mass flux jx field\n",
+    "ax4 = axes[1, 0]\n",
+    "c4 = ax4.contourf(X * 1000, Y * 1000, jx * 1000, levels=20, cmap='plasma')\n",
+    "fig.colorbar(c4, ax=ax4, label=r'$j_x \\times 10^3$')\n",
+    "ax4.set_xlabel('x [mm]')\n",
+    "ax4.set_ylabel('y [mm]')\n",
+    "ax4.set_title(r'Mass flux $j_x$')\n",
+    "ax4.set_aspect('equal')\n",
+    "\n",
+    "# 5. Mass flux jy field\n",
+    "ax5 = axes[1, 1]\n",
+    "c5 = ax5.contourf(X * 1000, Y * 1000, jy * 1000, levels=20, cmap='plasma')\n",
+    "fig.colorbar(c5, ax=ax5, label=r'$j_y \\times 10^3$')\n",
+    "ax5.set_xlabel('x [mm]')\n",
+    "ax5.set_ylabel('y [mm]')\n",
+    "ax5.set_title(r'Mass flux $j_y$')\n",
+    "ax5.set_aspect('equal')\n",
+    "\n",
+    "# 6. Centerline profiles\n",
+    "ax6 = axes[1, 2]\n",
+    "mid_y = rho.shape[0] // 2\n",
+    "mid_x = rho.shape[1] // 2\n",
+    "x_line = X[mid_y, :] * 1000\n",
+    "y_line = Y[:, mid_x] * 1000\n",
+    "p_x = p[mid_y, :] / 1000  # kPa along x at y=Ly/2\n",
+    "p_y = p[:, mid_x] / 1000  # kPa along y at x=Lx/2\n",
+    "\n",
+    "ax6.plot(x_line, p_x, 'b-', linewidth=2, label=r'$p(x, L_y/2)$')\n",
+    "ax6.plot(y_line, p_y, 'r--', linewidth=2, label=r'$p(L_x/2, y)$')\n",
+    "ax6.set_xlabel('Position [mm]')\n",
+    "ax6.set_ylabel('p [kPa]')\n",
+    "ax6.set_title('Centerline pressure profiles')\n",
+    "ax6.legend()\n",
+    "ax6.grid(True, alpha=0.3)\n",
+    "\n",
+    "fig.suptitle('2D FEM Solution Overview: Parabolic Slider with Deformation + Energy', fontsize=12)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "h3tamkqp4fi",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3D surface plot colored by temperature\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "from matplotlib.colors import Normalize\n",
+    "\n",
+    "# Get fields (inner cells only, excluding ghost cells)\n",
+    "h_deformed = problem.topo.h[1:-1, 1:-1]\n",
+    "T_field = problem.energy.temperature[1:-1, 1:-1]\n",
+    "\n",
+    "# Get coordinates\n",
+    "x = problem.topo.x[1:-1, 1:-1]\n",
+    "y = problem.topo.y[1:-1, 1:-1]\n",
+    "\n",
+    "# Create figure\n",
+    "fig = plt.figure(figsize=(8, 5), layout='constrained')\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "# Normalize temperature for colormap\n",
+    "norm = Normalize(vmin=T_field.min(), vmax=T_field.max())\n",
+    "colors = cm.inferno(norm(T_field))\n",
+    "\n",
+    "# Plot deformed surface colored by temperature\n",
+    "surf = ax.plot_surface(x * 1e3, y * 1e3, h_deformed * 1e6,\n",
+    "                        facecolors=colors, edgecolor='none', shade=False)\n",
+    "\n",
+    "ax.set_xlabel('x [mm]')\n",
+    "ax.set_ylabel('y [mm]')\n",
+    "ax.set_zlabel('h [µm]')\n",
+    "ax.set_title('Deformed Surface (colored by temperature)')\n",
+    "ax.invert_zaxis()\n",
+    "ax.view_init(elev=25, azim=-60)\n",
+    "\n",
+    "# Add colorbar for temperature\n",
+    "mappable = cm.ScalarMappable(norm=norm, cmap='inferno')\n",
+    "fig.colorbar(mappable, ax=ax, shrink=0.6, pad=0.15, label='Temperature [K]')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ldtla2rc2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Height profile along y at x=70mm\n",
+    "h_field = problem.topo.h\n",
+    "x_idx = int(0.070 / problem.grid['dx']) + 1  # +1 for ghost cell offset\n",
+    "h_slice = h_field[x_idx, 1:-1]\n",
+    "\n",
+    "h_undef = problem.topo.h_undeformed\n",
+    "h_undef_slice = h_undef[x_idx, 1:-1]\n",
+    "\n",
+    "from matplotlib.pyplot import legend, plot\n",
+    "plot(h_slice)\n",
+    "plot(h_undef_slice)\n",
+    "legend(['Deformed Height', 'Undeformed Height'])"
    ]
   }
  ],
