--- a/doc/tutorials/13_solver_comparison.ipynb
+++ b/doc/tutorials/13_solver_comparison.ipynb
@@ -10,7 +10,7 @@
     "Comparing three solver implementations on the same physical problems:\n",
     "- **explicit**: Explicit time-stepping (Ny=1)\n",
     "- **fem_1d**: FEM with Newton-Raphson (Ny=1)\n",
-    "- **fem_2d**: 2D FEM with stabilization (Ny=4)"
+    "- **fem_2d**: 2D FEM with stabilization (Ny=4, but periodic in y and therefore comparable to the 1D cases)"
    ]
   },
   {
