ENH: solution guards, full momentum terms, more flexible bc treatment

--- a/doc/tutorials/11_FEM2d_theory.ipynb
+++ b/doc/tutorials/11_FEM2d_theory.ipynb
@@ -949,7 +949,7 @@
     "- **R11Sx**: Flux divergence height source in x\n",
     "- **R11y**: Flux divergence in y\n",
     "- **R11Sy**: Flux divergence height source in y\n",
-    "- **R12**: Height change over time\n",
+    "- **R12**: Height change over time (not implemented)\n",
     "- **R1Stabx**, **R1Staby**: Pressure stabilization (Brezzi-Pitkäranta style for equal-order elements)"
    ]
   },
@@ -976,6 +976,8 @@
     "+ \\frac{\\partial \\overline{\\tau_{xx}}}{\\partial x}\n",
     "+ \\frac{1}{h} \\frac{\\partial h}{\\partial x}\\, \\left( \\overline{\\tau_{xx}} - \\tau_{xx}\\vert_{z=h_2} \\right) \\\\[2pt]\n",
     "&\\quad\n",
+    "+ \\frac{\\partial \\overline{\\tau_{xy}}}{\\partial y} \\\\[2pt]\n",
+    "&\\quad\n",
     "+ \\frac{1}{h}\\, \\tau_{xz}\\Big\\vert^{z=h_2}_{z=h_1} \\\\[2pt]\n",
     "&\\quad\n",
     "- \\frac{1}{h} \\frac{\\partial h}{\\partial t}\\, \\overline{j_x}\n",
@@ -990,11 +992,13 @@
    "source": [
     "- **R2Tx**: Time derivative\n",
     "- **R21x**: Pressure gradient\n",
-    "- **R22xx**: Momentum flux $j_x j_x$ + height source\n",
-    "- **R22yx**: Momentum flux $j_x j_y$ + height source\n",
-    "- **R23x**: Shear stress $\\tau_{xx}$ + height source\n",
+    "- **R22xx**, **R22xxS**: Momentum flux $j_x j_x$ + height source\n",
+    "- **R22yx**, **R22yxS**: Momentum flux $j_x j_y$ + height source\n",
+    "- **R23x**, **R23xS**: Normal stress $\\tau_{xx}$ + height source (not implemented)\n",
+    "- **R23xy**: In-plane shear stress $\\tau_{xy}$ (simplified: $\\eta \\, \\partial u / \\partial y$)\n",
     "- **R24x**: Wall shear stress $\\tau_{xz}$\n",
-    "- **R25x**: Height change over time"
+    "- **R25x**: Height change over time (not implemented)\n",
+    "- **R2Stabx**: Momentum stabilization"
    ]
   },
   {
@@ -1017,6 +1021,8 @@
     "- \\frac{\\partial}{\\partial y}\\!\\left( \\frac{\\overline{j_y}^2}{\\overline{\\rho}} \\right)\n",
     "- \\frac{1}{h} \\frac{\\partial h}{\\partial y}\\, \\frac{\\overline{j_y}^2}{\\overline{\\rho}} \\\\[2pt]\n",
     "&\\quad\n",
+    "+ \\frac{\\partial \\overline{\\tau_{xy}}}{\\partial x} \\\\[2pt]\n",
+    "&\\quad\n",
     "+ \\frac{\\partial \\overline{\\tau_{yy}}}{\\partial y}\n",
     "+ \\frac{1}{h} \\frac{\\partial h}{\\partial y}\\, \\left( \\overline{\\tau_{yy}} - \\tau_{yy}\\vert_{z=h_2} \\right) \\\\[2pt]\n",
     "&\\quad\n",
@@ -1034,11 +1040,13 @@
    "source": [
     "- **R2Ty**: Time derivative\n",
     "- **R21y**: Pressure gradient\n",
-    "- **R22xy**: Momentum flux $j_x j_y$ + height source\n",
-    "- **R22yy**: Momentum flux $j_y j_y$ + height source\n",
-    "- **R23y**: Shear stress $\\tau_{yy}$ + height source\n",
+    "- **R22xy**, **R22xyS**: Momentum flux $j_x j_y$ + height source\n",
+    "- **R22yy**, **R22yyS**: Momentum flux $j_y j_y$ + height source\n",
+    "- **R23yx**: In-plane shear stress $\\tau_{xy}$ (simplified: $\\eta \\, \\partial v / \\partial x$)\n",
+    "- **R23y**, **R23yS**: Normal stress $\\tau_{yy}$ + height source (not implemented)\n",
     "- **R24y**: Wall shear stress $\\tau_{yz}$\n",
-    "- **R25y**: Height change over time"
+    "- **R25y**: Height change over time (not implemented)\n",
+    "- **R2Staby**: Momentum stabilization"
    ]
   },
   {
